k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-backend
  labels:
    app: django
spec:
  replicas: 2
  selector:
    matchLabels:
      app: django
  template:
    metadata:
      labels:
        app: django
    spec:
      containers:
      - name: django
        image: thiagocmach/django-backend:latest
        ports:
        - containerPort: 8000
