k8s/celery-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: celery
  labels:
    app: celery
spec:
  replicas: 1
  selector:
    matchLabels:
      app: celery
  template:
    metadata:
      labels:
        app: celery
    spec:
      containers:
      - name: celery
        image: thiagocmach/django-backend:latest  # Use a mesma imagem do backend ou uma adaptada para o worker
        command: ["celery", "-A", "core", "worker", "--loglevel=error"]
