k8s/db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db
  labels:
    app: db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db
  template:
    metadata:
      labels:
        app: db
    spec:
      containers:
      - name: db
        image: postgres:alpine
        ports:
        - containerPort: 5432
        volumeMounts:
          - name: pgdata
            mountPath: /var/lib/postgresql/data
      volumes:
        - name: pgdata
          emptyDir: {}  # Em produção, use PersistentVolumeClaim (PVC)
