k8s/celery-exporter-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: celery-exporter
spec:
  selector:
    app: celery-exporter
  ports:
    - protocol: TCP
      port: 8888
      targetPort: 8888
  type: ClusterIP
