k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: react-service
spec:
  selector:
    app: react
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: ClusterIP
