k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: seu-dominio.com
    http:
      paths:
      - path: /backend
        pathType: Prefix
        backend:
          service:
            name: django-service
            port:
              number: 8000
      - path: /frontend
        pathType: Prefix
        backend:
          service:
            name: react-service
            port:
              number: 3000
      - path: /grafana
        pathType: Prefix
        backend:
          service:
            name: grafana
            port:
              number: 3000
